@@ -129,9 +129,14 @@ empathy_chandler_handle_channel (EmpathyChandler  *chandler,
 	TpChan *tp_chan;
 	TpConn *tp_conn;
 
-	tp_conn = tp_conn_new (tp_get_bus (),
-			       bus_name,
-			       connection);
+	tp_conn = tp_conn_new_without_connect (tp_get_bus (),
+					       bus_name,
+					       connection,
+					       NULL,
+					       error);
+	if (!tp_conn) {
+		return FALSE;
+	}
 
 	tp_chan = tp_chan_new (tp_get_bus(),
 			       bus_name,
